syntax = "proto3";

option go_package = "github.com/divilla/eop09/crudproto";

package crudproto;

service RPC {
  rpc Import (stream Entity) returns (CommandResponse) {}
  rpc List (ListRequest) returns (ListResponse) {}
  rpc Get (PkRequest) returns (Entity) {}
  rpc Upsert (Entity) returns (CommandResponse) {}
  rpc Delete (PkRequest) returns (CommandResponse) {}
}

message Entity {
  string key = 1;
  bytes value = 2;
}

message ListRequest {
  int64 pageNumber = 1;
  int64 pageSize = 2;
}

message PkRequest {
  string key = 1;
}

message CommandResponse {
  bool success = 1;
  uint64 rowsAffected = 2;
  repeated string errors = 3;
}

message ListResponse {
  repeated Entity results = 2;
}
